# VoxAtx-Image-Registration-and-Segmentation

./: AIRSConfig.cmake.in  AIRSGenerateConfig.cmake  CMakeLists.txt  Copyright.txt  README.TXT  UseAIRS.cmake  airs.py.in
AtamaiWarp/: vtkCalcCentroid.cxx  vtkCalcCentroid.h  vtkCalcCrossCorrelation.cxx  vtkCalcCrossCorrelation.h  vtkFunctionMinimizer.cxx  vtkFunctionMinimizer.h  vtkImage3DNoiseSource.cxx  vtkImage3DNoiseSource.h  vtkImageAmoebaGrid.cxx  vtkImageAmoebaGrid.h  vtkImageDataStatistics.cxx  vtkImageDataStatistics.h  vtkImageGridStatistics.cxx  vtkImageGridStatistics.h  vtkImageMean3D.cxx  vtkImageMean3D.h  vtkImageSingleMutualInformation.cxx  vtkImageSingleMutualInformation.h
CMake/: AIRSCommonBlock.cmake  AIRSConfig.h.in  AIRSThirdParty.cmake
Examples/: CMakeLists.txt  DifferenceRegistration.cxx  FrameFinder.cxx  RigidImageRegistration.cxx
ImageRegistration/: CMakeLists.txt  vtkFrameFinder.cxx  vtkFrameFinder.h  vtkFunctionMinimizer.cxx  vtkFunctionMinimizer.h  vtkGaussianInterpolator.cxx  vtkGaussianInterpolator.h  vtkITKXFMReader.cxx  vtkITKXFMReader.h  vtkITKXFMWriter.cxx  vtkITKXFMWriter.h  vtkImageCorrelationRatio.cxx  vtkImageCorrelationRatio.h  vtkImageCrossCorrelation.cxx  vtkImageCrossCorrelation.h  vtkImageMutualInformation.cxx  vtkImageMutualInformation.h  vtkImageNeighborhoodCorrelation.cxx  vtkImageNeighborhoodCorrelation.h  vtkImageRegistration.cxx  vtkImageRegistration.h  vtkImageSimilarityMetric.cxx  vtkImageSimilarityMetric.h  vtkImageSimilarityMetricInternals.h  vtkImageSquaredDifference.cxx  vtkImageSquaredDifference.h  vtkLabelInterpolator.cxx  vtkLabelInterpolator.h  vtkMorphologicalInterpolator.cxx  vtkMorphologicalInterpolator.h  vtkNelderMeadMinimizer.cxx  vtkNelderMeadMinimizer.h  vtkPowellMinimizer.cxx  vtkPowellMinimizer.h
ImageSegmentation/: CMakeLists.txt  vtkAtamaiSegmentationConfigure.h.in  vtkImageConnectivityFilter.cxx  vtkImageConnectivityFilter.h  vtkImageExtractPoints.cxx  vtkImageExtractPoints.h  vtkImageIslandRemoval.cxx  vtkImageIslandRemoval.h  vtkImageMRIBrainExtractor.cxx  vtkImageMRIBrainExtractor.h  vtkImagePointsIterator.cxx  vtkImagePointsIterator.h  vtkImageRegionIterator.cxx  vtkImageRegionIterator.h  vtkImageRegionIteratorBase.cxx  vtkImageRegionIteratorBase.h
Programs/: CMakeLists.txt  register.cxx  skullstrip.cxx
(+3 files in other folders)
